--- a/resources/css/_navigation.scss
+++ b/resources/css/_navigation.scss
@@ -14,9 +14,10 @@ nav {
     padding-bottom: 10px;
 }
 
-.nav__links ul li {
+/* .nav__links ul li {
     display: none;
 }
+*/
 
 .div__header{
     position: relative;
