--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -2,3 +2,25 @@ body {
     font-family: "Recoleta Alt";
 }
 
+.btn-validate{
+    background: var(--info);
+    color: var(--light);
+    font-family: "Recoleta Alt";
+    font-weight: 400;
+    border-radius: 0.5rem;
+    border: solid 1px var(--info);
+    cursor: pointer;
+    padding: 0.1rem 0.5rem;
+}
+
+.btn-delete{
+    background: var(--danger);
+    color: var(--light);
+    font-family: "Recoleta Alt";
+    font-weight: 400;
+    border-radius: 0.5rem;
+    border: solid 1px var(--danger);
+    cursor: pointer;
+    padding: 0.1rem 0.5rem;
+}
+
