--- a/resources/css/admin/_header.scss
+++ b/resources/css/admin/_header.scss
@@ -43,6 +43,7 @@ main{
 .form-body{
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 /*
@@ -57,7 +58,7 @@ input{
     margin: 0.5rem;
     font-family: "Recoleta Alt";
     font-weight: 600;
-    width: 100%;
+    width: 80%;
 }
 
 .btn-primary-dark{
