--- a/resources/css/admin/_header.scss
+++ b/resources/css/admin/_header.scss
@@ -1,8 +1,20 @@
+.dashboard{
+    background-color: var(--bg-secondary-light);
+    text-align: center;
+}
+
+.fil-ariane{
+    background-color: var(--bg-secondary-light);
+}
+
 .logo-header{
     background-color: var(--primary);
     display: flex;
     justify-content: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem 0 0 0;
+}
+img.logo-header{
+    width: 10rem;
 }
 
 .nav-header{
@@ -10,7 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 1rem;
+    padding: 0 1rem 1rem 1rem;
 }
 
 ul{
