--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -16,7 +16,7 @@ body {
 .btn-delete{
     background: var(--danger);
     color: var(--light);
-    font-family: "Recoleta Alt";
+    font-family: var(--font-primary), sans-serif;
     font-weight: 400;
     border-radius: 0.5rem;
     border: solid 1px var(--danger);
@@ -24,3 +24,6 @@ body {
     padding: 0.1rem 0.5rem;
 }
 
+h2{
+    color: #0c214e;
+}
