--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,9 +2,10 @@
 @import "variables";
 @import "fonts/fonts";
 
-@import "header";
+@import "bg-header";
 @import "navigation";
 @import "base";
+@import "content";
 @import "footer";
 
 
