--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -24,6 +24,15 @@ body {
     padding: 0.1rem 0.5rem;
 }
 
-h2{
-    color: #0c214e;
+h1{
+    position: absolute;
+    color: var(--light);
+    font-family: var(--font-primary);
+    font-size: var(--h1-font-size);
+    bottom: 20px;
+}
+
+h2 {
+    color: var(--primary-dark);
+    font-size: 1.5rem;
 }
