--- a/resources/css/_variables.scss
+++ b/resources/css/_variables.scss
@@ -7,6 +7,7 @@
     --secondary-light: #dacbaf;
     --secondary: #7a6238;
     --secondary-dark: #463820;
+    --bg-primary-light: #D0E1DB;
     --bg-secondary-light: #f0edea;
 
     --light: #fff;
