--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "variables";
 @import "fonts/fonts";
+@import "media-queries";
 
 @import "bg-header";
 @import "navigation";
