--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -83,7 +83,6 @@
     border-radius: 0 0 1rem 1rem;
     text-align: center;
     position: relative;
-    z-index: 10;
 }
 .card-data.savane{
     background-color: var(--secondary-light);
@@ -231,6 +230,7 @@ textarea{
 
 /**/
 .reviews-container {
+    width: 100%;
     text-align: center;
     margin: 2rem 0;
 }
@@ -241,6 +241,7 @@ textarea{
 }
 
 .carousel {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -250,8 +251,7 @@ textarea{
 }
 
 .carousel-content {
-    width: 500px;
-    padding: 1.5rem;
+    width: 50%;
     border-radius: 10px;
     text-align: left;
     flex-shrink: 0;
@@ -268,6 +268,7 @@ textarea{
     cursor: pointer;
     font-size: 1.5rem;
     border-radius: 5px;
+    background-color: transparent;
     transition: background-color 0.3s ease;
     position: relative;
     z-index: 1;
