Update ReviewsController, CSS files for reviews, reviewsForm.js, dashboard-admin.blade,reviews-list.blade, layouts/admin.blade,base.blade, DL icons for dashboard admin

--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -187,7 +187,7 @@
     font-size: 2rem;
 }
 
-/* */
+/* FORM */
 .form-review{
     display: flex;
     margin: 2rem;
@@ -228,70 +228,3 @@ textarea{
     cursor: pointer;
 }
 
-/**/
-.reviews-container {
-    width: 100%;
-    text-align: center;
-    margin: 2rem 0;
-}
-
-.reviews-container h2 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-}
-
-.carousel {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-    position: relative;
-    margin-bottom: 3rem;
-}
-
-.carousel-content {
-    width: 50%;
-    border-radius: 10px;
-    text-align: left;
-    flex-shrink: 0;
-}
-
-.carousel-content h3{
-    font-size: 1.5rem;
-}
-
-/* Carousel buttons */
-.btn-carousel {
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 1.5rem;
-    border-radius: 5px;
-    background-color: transparent;
-    transition: background-color 0.3s ease;
-    position: relative;
-    z-index: 1;
-}
-
-.btn-carousel:hover {
-    background-color: var(--primary);
-}
-
-/* Create review button */
-.btn-create {
-    margin-top: 1rem;
-}
-
-.btn-create a {
-    background-color: var(--primary-dark);
-    color: white;
-    padding: 10px 15px;
-    text-decoration: none;
-    border-radius: 5px;
-    font-size: 1rem;
-}
-
-.btn-create a:hover {
-    background-color: var(--primary);
-}
