--- a/resources/css/admin/_main.scss
+++ b/resources/css/admin/_main.scss
@@ -20,9 +20,6 @@
     border-radius: 0.5rem;
 }
 
-input[type="file"]{
-
-}
 
 .formulaires-admin{
     display: flex;
@@ -44,4 +41,112 @@ input[type="file"]{
 textarea{
     width: 100%;
     height: 4rem;
+}
+
+/* HEADER */
+#nav-link a{
+    /* TODO : dé-commenter display et faire le menu dropdown avec le burger + X */
+    /*display: none;*/
+    color: var(--light);
+    font-family: "Recoleta Alt", sans-serif;
+    font-size: 1.2rem;
+}
+
+/* DASHBOARD */
+.header-dash {
+    background-color: var(--bg-secondary-light);
+    padding-bottom: 1rem;
+}
+
+.dashboard {
+    background-color: var(--bg-secondary-light);
+    padding: 10px;
+    text-align: left;
+    font-family: 'Recoleta Alt', sans-serif;
+}
+
+.fil-ariane {
+    font-family: 'Recoleta Alt', sans-serif;
+    color: var(--primary-dark);
+}
+
+.fil-ariane ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.fil-ariane ul li {
+    display: inline;
+    margin-right: 0.5rem;
+    padding-left: 1rem;
+}
+
+.dashboard-cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    gap: 2rem;
+    justify-items: center;
+    margin: 20px 0;
+    padding: 0 10px;
+}
+
+.cards-list {
+    background-color: var(--primary-dark);
+    color: white;
+    text-align: center;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+    width: 120px;
+    height: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.cards-list:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+}
+
+.icon-dashboard {
+    width: 40px;
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.cards-list span {
+    font-size: 1rem;
+    font-family: 'Recoleta Alt', sans-serif;
+    font-weight: 300;
+    display: block;
+}
+
+.cards-list p {
+    margin: 5px 0 0;
+    font-size: 1rem;
+    font-family: 'Recoleta Alt', sans-serif;
+    display: none;
+}
+
+@media screen and (min-width: 769px) {
+    .dashboard-cards {
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        padding: 0 20px;
+    }
+
+    .cards-list {
+        width: 150px;
+        height: 150px;
+    }
+
+    .cards-list span {
+        display: none;
+    }
+
+    .cards-list p {
+        display: block;
+    }
 }
