--- a/resources/css/admin/_reviews-table.scss
+++ b/resources/css/admin/_reviews-table.scss
@@ -87,6 +87,8 @@
     justify-content: center;
     margin-top: 20px;
     padding: 0 20px;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .reviews-container{
@@ -98,7 +100,11 @@
 
 .send{
     margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
 
 .btn-send{
     color: var(--light);
@@ -106,6 +112,10 @@
     background-color: var(--primary-dark);
     padding: 0.2rem 0.5rem;
     border-radius: 0.2rem;
+}
+
+.btn-send.btn-pending:hover{
+    background-color: var(--primary);
 }
 
 .td-wrap{
