Update Controller VeterinarianReportsAdminController and views for veterinarian reports, update app.scss file for veterinarian reports add file _veterinarian-reports-cards.scss

--- a/resources/css/admin/_base.scss
+++ b/resources/css/admin/_base.scss
@@ -1,5 +1,8 @@
 main {
-    font-family: "Recoleta Alt";
+    font-family: "Recoleta Alt", cursive;
 }
 
-
+.btn-back{
+    margin-block: 1rem;
+    margin-left: 1rem;
+}
