--- a/resources/css/admin/_variables.scss
+++ b/resources/css/admin/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --primary-xlight: #8fbcac88;
+    --primary-xlight: rgba(143, 188, 172, 0.38);
     --primary-light: #8fbcac;
     --primary: #4b816e;
     --primary-dark: #264037;
