--- a/resources/css/admin/app.scss
+++ b/resources/css/admin/app.scss
@@ -6,5 +6,6 @@
 @import "reviews-table";
 @import "reviews-card";
 @import "animals-list";
+@import "veterinarian-reports-cards";
 @import "footer";
 @import "main";
