Update policy ReportsPolicy,Controller VeterinarianReportsAdminController, update scss files for veterinarian reports and animals list and foods consum

--- a/resources/css/admin/_base.scss
+++ b/resources/css/admin/_base.scss
@@ -2,7 +2,10 @@ main {
     font-family: "Recoleta Alt", cursive;
 }
 
-.btn-back{
+.alert-success{
+    color: var(--success);
+    border: .5rem solid #49a9b4;
+    border-radius: 0.5rem;
+    padding: 1rem;
     margin-block: 1rem;
-    margin-left: 1rem;
 }
