--- a/resources/css/admin/_variables.scss
+++ b/resources/css/admin/_variables.scss
@@ -3,6 +3,7 @@
     --primary-light: #8fbcac;
     --primary: #4b816e;
     --primary-dark: #264037;
+    --bg-primary-xlight: #EFF5F3;
 
     --secondary-light: #dacbaf;
     --secondary: #7a6238;
