--- a/resources/css/admin/app.scss
+++ b/resources/css/admin/app.scss
@@ -7,5 +7,6 @@
 @import "reviews-card";
 @import "animals-list";
 @import "veterinarian-reports-cards";
+@import "foods-consum";
 @import "footer";
 @import "main";
