--- a/resources/css/admin/_veterinarian-reports-cards.scss
+++ b/resources/css/admin/_veterinarian-reports-cards.scss
@@ -15,6 +15,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
+    margin-bottom: 2rem;
 }
 
 .card-reports {
@@ -57,10 +58,10 @@
     color: #333;
 }
 
-.btn-top{
+.btn-nav-reports{
     display: flex;
     gap: 1rem;
-    justify-content: flex-end;
+    justify-content: space-between;
 }
 
 /* Responsive */
