--- a/resources/css/admin/_veterinarian-reports-cards.scss
+++ b/resources/css/admin/_veterinarian-reports-cards.scss
@@ -58,6 +58,14 @@
     color: #333;
 }
 
+.food-item{
+    color: var(--primary);
+    font-size: 1.2rem;
+    border: 1px solid var(--primary);
+    border-radius: 0.5rem;
+    padding: 10px;
+}
+
 .btn-nav-reports{
     display: flex;
     gap: 1rem;
