Update _content.scss, views login.blade -delete links in navbar- and views/page/animal-sheet.blade -add button and fix css style-

--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -437,6 +437,11 @@ h4{
     font-family: "Recoleta Alt", sans-serif;
 }
 
+.btns-animal-sheet{
+    display: flex;
+    justify-content: space-between;
+}
+
 /* Section description */
 .description-animal {
     padding: 20px 0;
