--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -217,6 +217,7 @@
     font-family: "Recoleta Alt", sans-serif;
     margin: 1rem 0 1rem 0;
     padding: 0.4rem 0 0.4rem 0;
+    cursor: pointer;
 }
 
 input,
