--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -406,7 +406,7 @@ h4{
     margin-top: -60px;
 }
 
-/* Section image et bouton */
+/* Section animal-sheet image and button */
 .img-modal {
     position: relative;
     width: 100%;
@@ -443,7 +443,6 @@ h4{
     justify-content: space-between;
 }
 
-/* Section description */
 .description-animal {
     padding: 20px 0;
 }
@@ -462,7 +461,6 @@ h4{
     margin-bottom: 20px;
 }
 
-/* Bouton retour */
 .btn-back {
     background-color: var(--primary);
     border: none;
@@ -477,6 +475,44 @@ h4{
     font-size: 1.2rem;
 }
 
+.title-contact{
+    text-align: center;
+    color: var(--primary);
+    font-size: 2rem;
+    margin-bottom: 10px;
+}
+
+.form-contact{
+    margin: 1rem;
+}
+
+.form-group{
+    display: grid;
+}
+
+.btn-contact{
+    background-color: var(--primary-dark);
+    color: var(--light);
+    padding: 8px 10px;
+    margin-top: 1.5rem;
+    cursor: pointer;
+}
+
+input, textarea{
+    padding-left: 0.5rem;
+}
+
+.contact-label{
+    font-size: 1.3rem;
+    color: var(--primary-dark);
+    margin-top: 1rem;
+}
+
+.contact-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /* ------------------------------------ MEDIA QUERIES ------------------------------------*/
 @media (min-width: 768px) {
     .title-animals {
