updating CSS + admin and visitor views re-layout

--- a/resources/css/_carousel-reviews.scss
+++ b/resources/css/_carousel-reviews.scss
@@ -6,7 +6,8 @@
 }
 
 .reviews-container h2 {
-    font-size: 2rem;
+    font-size: 2.5rem;
+    color: var(--primary-dark);
     margin-bottom: 1rem;
 }
 
@@ -29,6 +30,7 @@
 
 .carousel-content h3{
     font-size: 1.5rem;
+    color: var(--primary);
 }
 
 /* Carousel buttons */
