--- a/resources/css/_footer.scss
+++ b/resources/css/_footer.scss
@@ -51,3 +51,11 @@ a {
     color: var(--warning);
     font-style: normal;
 }
+
+.logo-footer{
+    cursor: pointer;
+}
+
+img.logo-footer{
+    width: 8rem;
+}
