--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -27,7 +27,7 @@ body {
 h1{
     position: absolute;
     color: var(--light);
-    font-family: var(--font-primary);
+    font-family: var(--font-primary), "Recoleta Alt", sans-serif;
     font-size: var(--h1-font-size);
     bottom: 20px;
 }
