--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -187,14 +187,15 @@
 
 .section-openings h2 {
     color: var(--light);
-    padding: 1.5rem;
+    padding: 1rem;
+    font-size: 2.5rem;
 }
 
 .section-habitats h2 {
     color: var(--primary-dark);
     text-align: center;
     padding: 1.5rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 /* FORM */
@@ -237,6 +238,10 @@ textarea {
 
 .rating-icon {
     cursor: pointer;
+}
+
+.author-rating{
+    color: var(--primary);
 }
 
 .btn-back {
@@ -512,6 +517,18 @@ input, textarea{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.openings-closed{
+    margin: 1rem;
+    font-size: 1.3rem;
+}
+
+.title-openings{
+    font-weight: 300;
+    font-size: 1.3rem;
+    margin-bottom: 0.5rem;
+    text-decoration: underline;
 }
 /* ------------------------------------ MEDIA QUERIES ------------------------------------*/
 @media (min-width: 768px) {
