--- a/resources/css/admin/_main.scss
+++ b/resources/css/admin/_main.scss
@@ -7,17 +7,24 @@
     justify-content: center;
     cursor: pointer;
     margin: 0.5rem;
-    font-family: "Recoleta Alt";
+    font-family: "Recoleta Alt", sans-serif;
     font-weight: 400;
     border: none;
     width: 100%;
 }
 
-
-.click-file{
-    color: var(--light);
+.btn-send{
     background-color: var(--primary-dark);
-    border-radius: 0.5rem;
+    color: var(--light);
+    padding: 8px 10px;
+    margin-top: 1.5rem;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+    border-radius: 0.2rem;
+    font-family: "Recoleta Alt", sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
 }
 
 .form{
@@ -31,6 +38,7 @@
 textarea{
     width: 100%;
     height: 4rem;
+    font-family: "Recoleta Alt", sans-serif;
 }
 
 /* HEADER */
@@ -119,6 +127,58 @@ textarea{
     font-size: 1rem;
     font-family: 'Recoleta Alt', sans-serif;
     display: none;
+}
+
+.title-admin{
+    text-align: center;
+    color: var(--primary);
+    font-size: 2rem;
+}
+
+input, textarea{
+    padding-left: 0.5rem;
+    background-color: var(--bg-primary-xlight);
+    border: none;
+    border-radius: 0.5rem;
+    font-size: 1.2rem;
+    color: var(--primary-dark);
+}
+
+.btn-account{
+    background-color: var(--primary-dark);
+    color: var(--light);
+    padding: 8px 10px;
+    margin-top: 1.5rem;
+    cursor: pointer;
+    border: none;
+    width: 100%;
+    border-radius: 0.2rem;
+    font-family: "Recoleta Alt", sans-serif;
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
+.btn-list{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    margin: 2rem 1rem 2rem 1rem;
+}
+
+.btn-list a{
+    margin-bottom: 1rem;
+}
+
+.formulaires-admin{
+    display: grid;
+    justify-content: center;
+    margin: 2rem;
+}
+
+.btn-header{
+    display: flex;
+    justify-content: space-around;
+    margin: 1rem;
 }
 
 @media screen and (min-width: 769px) {
