Update Readme and css file, fix bug font recoleta

--- a/resources/css/_bg-header.scss
+++ b/resources/css/_bg-header.scss
@@ -2,7 +2,7 @@
 .text-header h1 {
     position: absolute;
     color: var(--light);
-    font-family: var(--font-primary);
+    font-family: "Recoleta Alt";
     font-size: var(--h1-font-size);
     bottom: 20px;
 }
