--- a/resources/css/_content.scss
+++ b/resources/css/_content.scss
@@ -215,7 +215,7 @@
     border-radius: 8px;
     color: var(--light);
     font-size: 20px;
-    font-family: "Recoleta Alt", sans-serif;
+    font-family: "Recoleta Alt";
     margin: 1rem 0 1rem 0;
     padding: 0.4rem 0 0.4rem 0;
     cursor: pointer;
@@ -227,7 +227,7 @@ textarea {
     border: none;
     font-size: 1.2rem;
     color: var(--primary-dark);
-    font-family: "Recoleta Alt", sans-serif;
+    font-family: "Recoleta Alt";
     border-radius: .25rem;
     padding: 0.4rem 0 0.4rem 0;
 }
@@ -356,7 +356,7 @@ textarea {
     padding: .2rem .5rem;
     color: var(--light);
     border: none;
-    font-family: "Recoleta Alt", sans-serif;
+    font-family: "Recoleta Alt";
     font-size: 1.2rem;
 }
 
@@ -440,7 +440,7 @@ h4{
     color: var(--light);
     text-decoration: none;
     font-size: 1.2rem;
-    font-family: "Recoleta Alt", sans-serif;
+    font-family: "Recoleta Alt";
 }
 
 .btns-animal-sheet{
