--- a/resources/css/admin/_reviews-table.scss
+++ b/resources/css/admin/_reviews-table.scss
@@ -10,7 +10,7 @@
     max-width: 1200px;
     margin: 0 auto;
     border-collapse: collapse;
-    font-family: 'Recoleta Alt', sans-serif;
+    font-family: 'Recoleta Alt';
     border: 1px solid rgba(143, 188, 172, 0.53);
     border-radius: 8px;
     overflow: hidden;
