--- a/resources/css/_base.scss
+++ b/resources/css/_base.scss
@@ -16,7 +16,7 @@ body {
 .btn-delete{
     background: var(--danger);
     color: var(--light);
-    font-family: var(--font-primary), sans-serif;
+    font-family: var(--font-primary), "Recoleta Alt";
     font-weight: 400;
     border-radius: 0.5rem;
     border: solid 1px var(--danger);
@@ -27,7 +27,7 @@ body {
 h1{
     position: absolute;
     color: var(--light);
-    font-family: var(--font-primary), "Recoleta Alt", sans-serif;
+    font-family: var(--font-primary), "Recoleta Alt";
     font-size: var(--h1-font-size);
     bottom: 20px;
 }
