--- a/resources/css/admin/_foods-consum.scss
+++ b/resources/css/admin/_foods-consum.scss
@@ -16,7 +16,7 @@ label {
 }
 
 select, input[type="text"] {
-    font-family: "Recoleta Alt", cursive;
+    font-family: "Recoleta Alt";
     font-size: 1.2rem;
     width: 100%;
     padding: 10px;
@@ -35,7 +35,7 @@ input[type="text"] {
 }
 
 button.btn-submit {
-    font-family: "Recoleta Alt", cursive;
+    font-family: "Recoleta Alt";
     background-color: var(--primary-dark);
     color: white;
     padding: 10px 15px;
