--- a/resources/css/admin/_main.scss
+++ b/resources/css/admin/_main.scss
@@ -7,7 +7,7 @@
     justify-content: center;
     cursor: pointer;
     margin: 0.5rem;
-    font-family: "Recoleta Alt", sans-serif;
+    font-family: "Recoleta Alt";
     font-weight: 400;
     border: none;
     width: 100%;
